# provider_system

./: .gitignore  CMakeLists.txt  Dockerfile  package.xml
.devcontainer/: devcontainer.json
.github/workflows/: docker-image-develop.yml  docker-image-feature.yml  docker-image-master.yml  docker-image-perception-develop.yml  docker-image-perception-feature.yml  docker-image-perception-master.yml
launch/: provider_system.launch
msg/: SystemTemperature.msg
script/: sonia_entrypoint.sh
src/provider_system/: main.cc  provider_system_node.cc  provider_system_node.h
