<?xml version="1.0"?>
<package>
  <name>provider_system</name>
  <version>1.1.0</version>
  <description>
    The provider_system is responsible to push system informations.
  </description>


  <author>Marc-Antoine Couture</author>

  <maintainer email="coumarc9@outlook.com">Marc-Antoine Couture</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
